Agregar nuevos archivos de imagen, eliminar imágenes obsoletas y añadir estilos para el formulario

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -64,7 +64,7 @@ const {
         <div class="place-items-start bg-primary-100 dark:bg-primary-950 lg:grid xl:grid-cols-3">
             <img
                 transition:name={id}
-                class="top-0 h-[50vh] w-full overflow-hidden object-cover object-bottom grayscale lg:rounded-3xl lg:p-4 xl:sticky xl:h-screen"
+                class="top-0 h-[50vh] w-full overflow-hidden object-cover object-bottom lg:rounded-3xl lg:p-4 xl:sticky xl:h-screen"
                 src={img.src}
                 alt="picture"
             />
