--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -1,37 +1,198 @@
 ---
 const team = [
-  {
-    name: 'Alfio Sambataro',
-    image: '/assets/team-1.webp',
-    job: 'Architecto',
-  },
-  {
-    name: 'Agostina Sambataro',
-    image: '/assets/team-2.webp',
-    job: 'Architecta',
-  },
+    {
+        name: 'Alfio Sambataro',
+        image: '/assets/alfio.avif',
+        job: 'Arquitecto - Socio Fundador',
+        mini_description:
+            'Arquitecto titulado en La Universidad de Buenos Aires en 1981, ha trabajado desde sus comienzos, hasta la fecha, en el diseño de salas de espectáculos y efectuando el diseño técnico de las escenografías para óperas y ballet en importantes producciones tanto en teatros de América como de Europa.',
+        full_description:
+            ' Arquitecto titulado en La Universidad de Buenos Aires en 1981, ha trabajado desde sus comienzos, hasta la fecha, en el diseño de salas de espectáculos y efectuando la ingeniería constructiva de las escenografías para óperas y ballet en importantes producciones tanto en teatros de América como de Europa. Como hito que marca el comienzo de una larga trayectoria de más de treinta años en el ámbito de la arquitectura teatral, se destaca el proyecto de remodelación, modernización y equipamiento, de la caja escénica del Teatro Colón de Buenos Aires, realizado en el año 1987, con Enrique Bordolini. Posteriormente trabajó en los proyectos del Teatro Argentino de La Plata, Provincia de Buenos Aires, desarrollado en el año 1999 y el anteproyecto de oferta licitatoria del Palau de les Arts, Reina Sofia en la Ciudad de las Artes y las Ciencias de Valencia, España. Su carrera dentro de esta especialidad siguió expandiéndose participando en proyectos a nivel internacional tales como, The Kimmel Center for the Performing Arts de Filadelfia, Estados Unidos; The Eastman Theater en Rochester de Nueva York; el Teatro Municipal de Santiago de Chile; el Teatro Municipal Ignacio Pane de Asunción, Paraguay entre otros. La temática abordada abarca además de la escenotecnia, la refuncionalización de edificios culturales históricos, tarea desarrollada en conjunto con especialistas de restauración arquitectónica. Dentro de este tópico produjo proyectos tales como el Teatro Martín Fierro de La Plata; el Centro Cultural Recoleta en la Ciudad Autónoma de Buenos Aires, El Centro Cultural Casa Lo Matta, en Vitacura, Chile y La Escuela de Ballet del Teatro Municipal de Santiago de Chile, entre otros. También abarcó su actividad como asesor escenotécnico la realización de nuevas salas para espectáculos y eventos de mediana y gran envergadura, tales como el Centro Cultural Gabriela Mistral, de Santiago de Chile; Teatro Bellas Artes de Bogotá; Arena de Santiago; Teatro del Lago en Frutillar, ambos en Chile, entre otros. Con Enrique Bordolini desarrollaron desde hace más de 30 años la dirección y producción técnica de grandes eventos al aire libre, para entidades tanto públicas como privadas.',
+        email: 'alfiosambataro@sambataroarquitectos.com',
+    },
+    {
+        name: 'Enrique Bordolini',
+        image: '/assets/enrique.avif',
+        job: 'Escenógrafo - Socio Fundador',
+        mini_description:
+            'Escenógrafo con una amplia trayectoria tanto en Argentina como en Europa y América. Fue director de producciones del Teatro Colón de Buenos Aires y director técnico del Teatro Municipal de Santiago de Chile. Sus trabajos incluyen las óperas Lucia di Lammermoor, Otello, La traviata y Nabucco entre otras.',
+        full_description:
+            'Se formó en el Teatro Colón donde fue responsable del diseño de los sistemas de iluminación (1979), dirigió el proyecto de modernización escénica (1989) y, hasta 1991, se desempeñó como Director de Producción Escenética. Fue Director Técnico de los teatros Argentino de la Plata (1979), Municipal de Santiago de Chile (en dos oportunidades) y Director Escenotécnico del Teatro Colón (1998). Realizó el diseño escenográfico de óperas como La traviata (Premio APES), Le cantatrice villane, El barbero de Sevilla, L’elisir d’amore, Don Pasquale, Un ballo in maschera, Rigoletto, Ernani, Nabucco, La bohème, Lucia di Lammermoor y Fedora, entre otras. Lo hizo en teatros como el Colón de Buenos Aires, Teresa Carreño de Caracas, Colón de Bogotá, Municipal de Santiago, Ópera de Colombia, Nacional Sucre de Quito, Villamaría de Jerez de la Frontera, Ópera de Oviedo y Pérez Galdós de Las Palmas de Gran Canaria, entre otros. Trabaja en varios proyectos para teatros de América Latina y, en esta temporada, asumió la Dirección de Producción Escenotécnica del Teatro Argentino de La Plata.',
+        email: 'alfiosambataro@enriquebordolini@sambataroarquitectos.com',
+    },
+    {
+        name: 'Agostina Sambataro',
+        image: '/assets/agostina.avif',
+        job: 'Architecta - Socia Co-Fundadora',
+        mini_description:
+            'Desde su egreso de la Universidad de Buenos Aires en el año 2013 en el cual fue distinguida por su destacada labor y desempeño académico, ha acumulado experiencia en diversas áreas de la arquitectura, tanto nacional como internacionalmente, orientándose hacia el ámbito de la educación y la cultura.',
+        full_description:
+            'Desde su egreso de la Universidad de Buenos Aires en el año 2013 en el cual fue distinguida con el “Diploma por su destacada labor y desempeño académico, reconocida por entidades públicas y privadas externas al ámbito de la Universidad”, ha acumulado experiencia en diversas áreas de la arquitectura, tanto nacional como internacionalmente orientándose hacia el ámbito educacional y cultural. Aun siendo estudiante - luego de su experiencia laboral en Estados Unidos y académica en Alemania y Nueva Zelanda - comenzó su carrera en arquitectura en Santiago de Chile en el estudio Amercanda junto al arquitecto Bernd Haller. Más adelante trabajó en el proyecto de edificio de viviendas BMC y Aula Magna de la Universidad de Quilmes en el estudio Faivre en Buenos Aires. Participó también en concursos de arquitectura tanto nacionales como internacionales, obteniendo el primer lugar en dos ocasiones, incluyendo el “Premio Clarín-SCA para estudiantes de arquitectura”. En el año 2015 se trasladó a la ciudad de Colonia, Alemania para formar parte del equipo de arquitectos del estudio v-architekten, en donde obtuvo el primer lugar como resultado del concurso para la Escuela técnica del ejército de la República Federal de Alemania en Karlsruhe, colaborando también en los proyectos de la Escuela primaria Berkersheim en Frankfurt y Centro Parroquial Langenfeld. De regreso en Buenos Aires se asoció al estudio Sambataro Arquitectos, en el cual se desempeña actualmente, especializándose en el ámbito de la arquitectura teatral y la escenotecnia. En dicho aspecto, ha trabajado para prestigiosas instituciones como el Centro Cultural Recoleta, Teatro Coliseo de la Fundación Cultural Coliseum, Teatro Argentino de La Plata, Teatro Colón, Teatro Tronador de Mar del Plata, Teatro Martín Fierro de La Plata, Teatro del Libertador General San Martin de Córdoba y Teatro Príncipe de Gales de Santiago de Chile, entre otros; desempeñándose tanto en la supervisión de obra como en el desarrollo de proyectos licitatorios y ejecutivos. Participó en cursos de especialización dictados por Graduate School of Design of the University of Harvard, Argentina Green Building Council y American Institute of Architects de Washington DC. Sus trabajos y artículos han sido publicados en revistas, canales televisivos y plataformas de arquitectura como Revista Summa, ARQ Clarín, Canal (á), D&D, Plataforma arquitectura y ArchDaily.',
+        email: 'agostinasambataro@sambataroarquitectos.com',
+    },
+];
+
+const team2 = [
+    {
+        position: 'Escenotecnia',
+        name1: 'Enrique Bordolini',
+        name2: 'Arq. Alfio Sambataro',
+    },
+    {
+        position: 'Arquitectura teatral',
+        name1: 'Arq. Agostina Sambataro',
+        name2: '',
+    },
+    {
+        position: 'Iluminación escénica',
+        name1: 'Enrique Bordolini',
+        name2: '',
+    },
+    {
+        position: 'Patrimonio y restauración',
+        name1: 'Arq. Andrés Cumsille C.',
+        name2: '',
+    },
+    {
+        position: 'Ingeniería estructural y mecánica',
+        name1: 'Ing. Juan Antonio Vargas',
+        name2: '',
+    },
+    {
+        position: 'Ingeniería acústica',
+        name1: 'Ing. Jorge Sommerhoff',
+        name2: '',
+    },
+    {
+        position: 'Sonido y video',
+        name1: 'Jorge Cárdena',
+        name2: '',
+    },
 ];
 ---
 
 <section class="py-16 sm:py-20">
-  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-    <div class="sm:space-8 space-y-12">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Conoce nuestros equipo</h2>
-      <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
-        {
-          team.map((item) => (
-            <li class="border-primary-900/10 dark:border-primary-300/10 rounded-3xl border px-6 py-8">
-              <div class="space-y-6">
-                <img class="mx-auto h-auto w-16 rounded-full" src={item.image} alt={item.name} />
-                <div class="text-center">
-                  <h3 class="text-lg font-medium">{item.name}</h3>
-                  <p class="text-primary-950/70 dark:text-primary-200/70 text-base">{item.job}</p>
-                </div>
-              </div>
-            </li>
-          ))
-        }
-      </ul>
+    <div class="relative mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+        <div class="sm:space-8 space-y-12">
+            <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Conoce nuestro equipo</h2>
+            <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+                {
+                    team.map((item, index) => (
+                        <li
+                            key={index}
+                            class="rounded-3xl border border-primary-900/10 px-6 py-8 dark:border-primary-300/10">
+                            <div class="space-y-6">
+                                <img
+                                    class="mx-auto h-40 w-40 rounded-full object-cover"
+                                    src={item.image}
+                                    alt={item.name}
+                                />
+                                <div class="text-center">
+                                    <h3 class="text-lg font-bold">{item.name}</h3>
+                                    <p class="pb-2 text-base font-semibold text-primary-950/70 dark:text-primary-200/70">
+                                        {item.job}
+                                    </p>
+                                    <p class="text-balance text-xs text-primary-950/70 dark:text-primary-200/70 lg:text-sm">
+                                        {item.mini_description}
+                                    </p>
+                                </div>
+                                <button
+                                    class="open-dialog-button mx-auto w-full rounded-3xl border border-primary-900/10 px-4 py-2 transition hover:bg-primary-200 dark:border-primary-300/10 hover:dark:bg-primary-900/10"
+                                    data-index={index}>
+                                    Ver más
+                                </button>
+                                {/* Dialog que se abrirá al hacer click */}
+                                <dialog
+                                    class="dialog fixed left-0 top-0 z-50 m-auto h-full w-full overflow-hidden rounded-3xl bg-primary-100 dark:bg-primary-800 lg:max-w-[50%]"
+                                    data-index={index}>
+                                    <aside
+                                        class={`bg-black/50 shadow-gray-600/10 motion-scale-in-[0.48] motion-translate-x-in-[-1%] motion-translate-y-in-[1%] motion-opacity-in-[0%] motion-blur-in-[5px] motion-duration-[0.25s] motion-duration-[0.53s]/scale motion-duration-[0.53s]/translate group relative mx-auto flex h-full w-full items-center justify-center gap-4 rounded-3xl py-4 shadow-2xl !backdrop-blur transition-all`}>
+                                        <button
+                                            class="close-dialog-button close-dialog absolute right-4 top-4 z-20 h-8 w-8 text-white transition hover:scale-105 "
+                                            data-index={index}>
+                                            <svg
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                fill="none"
+                                                viewBox="0 0 24 24"
+                                                stroke="currentColor">
+                                                <path
+                                                    stroke-linecap="round"
+                                                    stroke-linejoin="round"
+                                                    stroke-width="2"
+                                                    d="M6 18L18 6M6 6l12 12"
+                                                />
+                                            </svg>
+                                        </button>
+                                        <div class="flex h-full flex-col items-center space-y-4 overflow-auto p-8">
+                                            <img
+                                                class="h-40 w-40 rounded-full  object-cover"
+                                                src={item.image}
+                                                alt={item.name}
+                                            />
+                                            <h3 class="text-lg font-bold text-primary-950/70 dark:text-primary-100/70">
+                                                {item.name}
+                                            </h3>
+                                            <p class="text-base font-semibold text-primary-950/70 dark:text-primary-100/70">
+                                                {item.job}
+                                            </p>
+                                            <p class="text-balance text-pretty px-8 text-xs text-primary-950/70 dark:text-primary-200/70 lg:text-sm">
+                                                {item.full_description}
+                                            </p>
+                                            <a
+                                                href={item.email}
+                                                target="_blank"
+                                                class="text-xs text-primary-950/70 transition hover:scale-105 dark:text-primary-200/70 lg:text-sm">
+                                                {item.email}
+                                            </a>
+                                        </div>
+                                    </aside>
+                                </dialog>
+                            </div>
+                        </li>
+                    ))
+                }
+            </ul>
+
+            <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+                {
+                    team2.map((item, index) => (
+                        <li class="flex min-h-[200px] items-center justify-center rounded-3xl border border-primary-900/10 px-6 py-8 dark:border-primary-300/10">
+                            <div class="space-y-6">
+                                <div class="text-center">
+                                    <p class="text-base text-primary-950/70 dark:text-primary-200/70">
+                                        {item.position}
+                                    </p>
+                                    <h3 class="text-lg font-bold">{item.name1}</h3>
+                                    <h3 class="text-lg font-bold">{item.name2}</h3>
+                                </div>
+                            </div>
+                        </li>
+                    ))
+                }
+            </ul>
+        </div>
     </div>
-  </div>
 </section>
+
+<script is:inline>
+    document.addEventListener('DOMContentLoaded', () => {
+        document.addEventListener('click', (event) => {
+            const target = event.target.closest('button');
+
+            if (!target) return;
+
+            if (target.matches('.open-dialog-button')) {
+                const index = target.getAttribute('data-index'); // 🔹 Usamos getAttribute
+                if (index !== null) {
+                    const dialog = target.closest('li').querySelector('dialog');
+                    if (dialog) dialog.showModal();
+                }
+            }
+
+            if (target.matches('.close-dialog-button')) {
+                const dialog = target.closest('dialog');
+                if (dialog) dialog.close();
+            }
+        });
+    });
+</script>
