--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -4,23 +4,23 @@ const bottomLinks = [
         header: 'Media',
         links: [
             {
-                name: 'Github',
-                href: 'https://github.com/',
+                name: 'LinkedIn',
+                href: 'https://www.linkedin.com/in/sambataro-arquitectos-5838b715a/',
                 isExternal: true,
             },
             {
                 name: 'Twitter',
-                href: 'https://twitter.com/',
+                href: 'https://x.com/sambataroarq',
                 isExternal: true,
             },
             {
                 name: 'Instagram',
-                href: 'https://instagram.com/',
+                href: 'https://www.instagram.com/sambataroarquitectos/',
                 isExternal: true,
             },
             {
                 name: 'Facebook',
-                href: 'https://facebook.com/',
+                href: 'https://www.facebook.com/sambataroarquitectos/',
                 isExternal: true,
             },
         ],
