Eliminar archivos de video obsoletos y agregar nuevas imágenes en el directorio de publicaciones optimizadas

--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import Base from '../../layouts/Base.astro';
-import video from '../../video/colon2_video_op.mp4';
+import video from '../../video/presentation_sambataro_op.mp4';
 import colon from '../../img/colon.avif';
 
 interface Props {
