--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -18,7 +18,7 @@ const team = [
             'Escenógrafo con una amplia trayectoria tanto en Argentina como en Europa y América. Fue director de producciones del Teatro Colón de Buenos Aires y director técnico del Teatro Municipal de Santiago de Chile. Sus trabajos incluyen las óperas Lucia di Lammermoor, Otello, La traviata y Nabucco entre otras.',
         full_description:
             'Se formó en el Teatro Colón donde fue responsable del diseño de los sistemas de iluminación (1979), dirigió el proyecto de modernización escénica (1989) y, hasta 1991, se desempeñó como Director de Producción Escenética. Fue Director Técnico de los teatros Argentino de la Plata (1979), Municipal de Santiago de Chile (en dos oportunidades) y Director Escenotécnico del Teatro Colón (1998). Realizó el diseño escenográfico de óperas como La traviata (Premio APES), Le cantatrice villane, El barbero de Sevilla, L’elisir d’amore, Don Pasquale, Un ballo in maschera, Rigoletto, Ernani, Nabucco, La bohème, Lucia di Lammermoor y Fedora, entre otras. Lo hizo en teatros como el Colón de Buenos Aires, Teresa Carreño de Caracas, Colón de Bogotá, Municipal de Santiago, Ópera de Colombia, Nacional Sucre de Quito, Villamaría de Jerez de la Frontera, Ópera de Oviedo y Pérez Galdós de Las Palmas de Gran Canaria, entre otros. Trabaja en varios proyectos para teatros de América Latina y, en esta temporada, asumió la Dirección de Producción Escenotécnica del Teatro Argentino de La Plata.',
-        email: 'alfiosambataro@enriquebordolini@sambataroarquitectos.com',
+        email: 'enriquebordolini@sambataroarquitectos.com',
     },
     {
         name: 'Agostina Sambataro',
@@ -78,8 +78,7 @@ const team2 = [
             <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
                 {
                     team.map((item, index) => (
-                        <li
-                            class="rounded-3xl border border-primary-900/10 px-6 py-8 dark:border-primary-300/10">
+                        <li class="rounded-3xl border border-primary-900/10 px-6 py-8 dark:border-primary-300/10">
                             <div class="space-y-6">
                                 <img
                                     class="mx-auto h-40 w-40 rounded-full object-cover"
@@ -107,7 +106,7 @@ const team2 = [
                                     <aside
                                         class={`bg-black/50 shadow-gray-600/10 motion-scale-in-[0.48] motion-translate-x-in-[-1%] motion-translate-y-in-[1%] motion-opacity-in-[0%] motion-blur-in-[5px] motion-duration-[0.25s] motion-duration-[0.53s]/scale motion-duration-[0.53s]/translate group relative mx-auto flex h-full w-full items-center justify-center gap-4 rounded-3xl py-4 shadow-2xl !backdrop-blur transition-all`}>
                                         <button
-                                            class="close-dialog-button close-dialog absolute right-4 top-4 inline-flex h-12 w-12 p-2 items-center justify-center rounded-full bg-primary-200/50 text-primary-950 shadow ring-primary-950 backdrop-blur-md transition hover:bg-primary-200/75 focus:outline-none focus-visible:ring-2 dark:bg-primary-800/50 dark:text-primary-200 dark:hover:bg-primary-800/75"
+                                            class="close-dialog-button close-dialog absolute right-4 top-4 inline-flex h-12 w-12 items-center justify-center rounded-full bg-primary-200/50 p-2 text-primary-950 shadow ring-primary-950 backdrop-blur-md transition hover:bg-primary-200/75 focus:outline-none focus-visible:ring-2 dark:bg-primary-800/50 dark:text-primary-200 dark:hover:bg-primary-800/75"
                                             data-index={index}>
                                             <svg
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -140,7 +139,7 @@ const team2 = [
                                             <a
                                                 href={item.email}
                                                 target="_blank"
-                                                class="text-xs text-primary-950/70 transition hover:scale-105 dark:text-primary-200/70 lg:text-sm">
+                                                class="inline-flex h-12 items-center justify-center rounded-full bg-primary-200/50 p-2 px-8 text-primary-950 shadow ring-primary-950 backdrop-blur-md transition hover:bg-primary-200/75 focus:outline-none focus-visible:ring-2 dark:bg-primary-800/50 dark:text-primary-200 dark:hover:bg-primary-800/75">
                                                 {item.email}
                                             </a>
                                         </div>
