--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Testimonials from '../components/home/Testimonials.astro';
 import Footer from '../components/layout/Footer.astro';
 import Header from '../components/layout/Header.astro';
 import Layout from '../layouts/Layout.astro';
+import IndexNotesComponent from '../components/IndexNotesComponent.astro';
 
 const texts = [
     {
@@ -26,8 +27,8 @@ const texts = [
     <Hero title={texts[0].title} description={texts[0].description} />
     <Heading title="Proyectos" subtitle="Selección de los más renombrados" />
     <Projects />
-    <Heading title="Notas" subtitle="Notas de los medios" />
-    <Notes />
+    <Heading title="Notas y publicaciones" subtitle="de los medios" />
+    <IndexNotesComponent client:load />
     <!-- <Expertise /> -->
     <!-- <Testimonials /> -->
     <Cta />
