--- a/src/components/layout/Nav.astro
+++ b/src/components/layout/Nav.astro
@@ -23,16 +23,21 @@ const links = [
     },
     {
         ref: '04',
+        name: t('nav.news'),
+        href: '/news',
+    },
+    {
+        ref: '05',
         name: t('nav.publications'),
         href: '/publications',
     },
     {
-        ref: '05',
+        ref: '06',
         name: t('nav.service'),
         href: '/service',
     },
     {
-        ref: '06',
+        ref: '07',
         name: t('nav.contact'),
         href: '/contact',
     },
