--- a/src/components/NewsComponent.astro
+++ b/src/components/NewsComponent.astro
@@ -478,7 +478,10 @@ const publi = [
     <Header />
     <GoBack />
     <div class="mx-auto h-full w-full max-w-2xl px-4 pt-20 sm:px-6 lg:max-w-7xl lg:px-8">
-        <Heading title="Publicaciones" subtitle="Notas y publicaciones de los medios" />
+        <Heading
+            title="P"
+            subtitle="Noticias sobre arquitectura teatral y escenotecnia respecto a proyectos realizados por Sambataro Arquitectos"
+        />
         <div class="mx-auto px-4 py-8">
             <ul role="list" class="grid grid-cols-2 gap-2 lg:grid-cols-4">
                 {
